content/_generated-doc/3.8/config/quarkus-oidc-token-propagation-reactive.adoc

:summaryTableId: quarkus-oidc-token-propagation-reactive
[.configuration-legend]
icon:lock[title=Fixed at build time] Configuration property fixed at build time - All other configuration properties are overridable at runtime
[.configuration-reference.searchable, cols="80,.^10,.^10"]
|===

h|[[quarkus-oidc-token-propagation-reactive_configuration]]link:#quarkus-oidc-token-propagation-reactive_configuration[Configuration property]

h|Type
h|Default

a|icon:lock[title=Fixed at build time] [[quarkus-oidc-token-propagation-reactive_quarkus-oidc-token-propagation-reactive-enabled]]`link:#quarkus-oidc-token-propagation-reactive_quarkus-oidc-token-propagation-reactive-enabled[quarkus.oidc-token-propagation-reactive.enabled]`


[.description]
--
If the OIDC Token Reactive Propagation is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_PROPAGATION_REACTIVE_ENABLED+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_PROPAGATION_REACTIVE_ENABLED+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`true`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-token-propagation-reactive_quarkus-oidc-token-propagation-reactive-enabled-during-authentication]]`link:#quarkus-oidc-token-propagation-reactive_quarkus-oidc-token-propagation-reactive-enabled-during-authentication[quarkus.oidc-token-propagation-reactive.enabled-during-authentication]`


[.description]
--
Whether the token propagation is enabled during the `SecurityIdentity` augmentation.

For example, you may need to use a REST client from `SecurityIdentityAugmentor`
to propagate the current token to acquire additional roles for the `SecurityIdentity`.

Note, this feature relies on a duplicated context. More information about Vert.x duplicated
context can be found in xref:duplicated-context.adoc[this guide].

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_PROPAGATION_REACTIVE_ENABLED_DURING_AUTHENTICATION+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_PROPAGATION_REACTIVE_ENABLED_DURING_AUTHENTICATION+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-token-propagation-reactive_quarkus-oidc-token-propagation-reactive-exchange-token]]`link:#quarkus-oidc-token-propagation-reactive_quarkus-oidc-token-propagation-reactive-exchange-token[quarkus.oidc-token-propagation-reactive.exchange-token]`


[.description]
--
Exchange the current token with OpenId Connect Provider for a new token using either "urn:ietf:params:oauth:grant-type:token-exchange" or "urn:ietf:params:oauth:grant-type:jwt-bearer" token grant before propagating it.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_PROPAGATION_REACTIVE_EXCHANGE_TOKEN+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_PROPAGATION_REACTIVE_EXCHANGE_TOKEN+++`
endif::add-copy-button-to-env-var[]
--|boolean 
|`false`


a|icon:lock[title=Fixed at build time] [[quarkus-oidc-token-propagation-reactive_quarkus-oidc-token-propagation-reactive-client-name]]`link:#quarkus-oidc-token-propagation-reactive_quarkus-oidc-token-propagation-reactive-client-name[quarkus.oidc-token-propagation-reactive.client-name]`


[.description]
--
Name of the configured OidcClient. Note this property is only used if the `exchangeToken` property is enabled.

ifdef::add-copy-button-to-env-var[]
Environment variable: env_var_with_copy_button:+++QUARKUS_OIDC_TOKEN_PROPAGATION_REACTIVE_CLIENT_NAME+++[]
endif::add-copy-button-to-env-var[]
ifndef::add-copy-button-to-env-var[]
Environment variable: `+++QUARKUS_OIDC_TOKEN_PROPAGATION_REACTIVE_CLIENT_NAME+++`
endif::add-copy-button-to-env-var[]
--|string 
|

|===